--- a/app/globals.css
+++ b/app/globals.css
@@ -8,11 +8,14 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-playfair);
+
+  --font-sans: var(--font-poppins), sans-serif;
+  --font-serif: var(--font-playfair), serif;
+  --font-cinzeld: var(--font-cinzel), cinzeld;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: var(--font-playfair), serif;
+  font-family: var(--font-sans);
 }
